FIX: alignment of planning document button

--- a/_sass/minimal-mistakes/_ovgtsl.scss
+++ b/_sass/minimal-mistakes/_ovgtsl.scss
@@ -48,3 +48,8 @@
 .site_tagline {
   visibility: hidden;
 }
+
+.conference_planning_button {
+  display: flex !important;
+  margin-left: 1em;
+}
